# rpg_quadrotor_control

./: .gitignore
bridges/sbus_bridge/parameters/: waterbug.yaml
bridges/sbus_bridge/src/: sbus_bridge.cpp
control/autopilot/: package.xml
control/autopilot/include/autopilot/: autopilot.h  autopilot_inl.h
control/autopilot/parameters/: default.yaml
control/autopilot/src/: autopilot_node.cpp
control/position_controller/src/: position_controller.cpp
control/simple_controller/: CMakeLists.txt  package.xml
control/simple_controller/include/simple_controller/: simple_controller.h  simple_controller_params.h
control/simple_controller/parameters/: default.yaml
control/simple_controller/src/: simple_controller.cpp
simulation/rpg_rotors_interface/launch/: quadrotor_empty_world.launch  quadrotor_empty_world_no_controller.launch
simulation/rpg_rotors_interface/launch/basics/: base_quad_simulation.launch  base_quad_simulation_no_controller.launch
simulation/rpg_rotors_interface/parameters/: autopilot.yaml  simple_controller.yaml
trajectory_planning/trajectory_generation_helper/include/trajectory_generation_helper/: flip_trajectory_helper.h
trajectory_planning/trajectory_generation_helper/src/: circle_trajectory_helper.cpp  flip_trajectory_helper.cpp  heading_trajectory_helper.cpp
utils/fpv_aggressive_trajectories/: CMakeLists.txt  package.xml
utils/fpv_aggressive_trajectories/include/fpv_aggressive_trajectories/: fpv_aggressive_trajectories.h
utils/fpv_aggressive_trajectories/launch/: simulation.launch
utils/fpv_aggressive_trajectories/rviz/: simulation_looping.perspective  trajectory_comparison_looping_sim.rviz
utils/fpv_aggressive_trajectories/src/: fpv_aggressive_trajectories.cpp
utils/trajectory_visualizer/src/: trajectory_visualizer.cpp
(+1 files in other folders)
