<?xml version="1.0"?>
<package format="2">
  <name>simple_controller</name>
  <version>0.0.0</version>
  <description>The simple_controller package</description>

  <maintainer email="ekaufmann@ifi.uzh.ch">Elia Kaufmann</maintainer>
  <license>MIT</license>

  <author>Elia Kaufmann</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>quadrotor_common</depend>
  <depend>quadrotor_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
    
  </export>
</package>
